--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "i18next": "^23.13.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.1",
     "react-router-dom": "^6.26.0",
     "sonner": "^1.5.0",
     "zod": "^3.23.8",
